2004/01/14 00:21 (-0500) muppetman

	* GBoxed.xs, GType.xs, GValue.xs: more spots where we should use
	GINT_TO_POINTER and friends

	* t/9.t, t/a.t: skip tests that exercise glib bugs on x86_64; we
	need version API in the bindings to do this correctly.

2004/01/13 22:41 (-0500) muppetman

	* AUTHORS, Glib.xs, GObject.xs, GType.xs, typemap: applied
	patch (with extra fuzz) from Jacek Konieczny <jajcus at bnet dot pl>
	to clean up warnings on 64-bit platforms.

2004/01/13 22:20 (-0500) muppetman

	* ParseXSDoc.pm: support continuation lines in xsubs.  this borks line
	number handling, and is far more permissive than xsubpp, but xsubpp
	will be the thing that causes people's code to break, and to do the
	line number handling correctly would require far too much code tearup.
	also, honor __hide__ correctly on =for apidoc comments that supply
	a symbol name (by removing the end-of-line anchor from the regex).

2004/01/09 14:33 (-0500) rwmcfa1

	* AUTHORS: mailing list addr correction.

2004/01/08 21:22 (-0500) rwmcfa1

	* Glib.xs: bit the bullet and made filename_to_unicode and 
	filename_from_bullet work with either :: or -> syntaxes.

	* Glib.pm: doc'd ^ as using the -> syntax.

	there was great discussion on the list about this issue (in a more 
	general sense) bascially early on the decision/mandate was made that
	the -> syntax was to be used everywhere. right or wrong it's to late
	change now that stable stuff has hit the world. the above functions
	work either way, so we're safe.

2003/12/31 02:03 (-0500) muppetman

	* GValue.xs: paranoia -- check for sv==NULL before passing to SvOK.

2003/12/30 11:49 (-0500) rwmcfa1

	* GenPod.pm, MakeHelper.pm, Subclass.pm: added version numbers

2003/12/30 10:12 (-0500) rwmcfa1

	* MakeHelper.pm: moved the const_cccmd to the bottom of the file so 
	that the first package isn't MY (caused issues with CPAN and generally
	wasn't a good idea.) Also converted the comment about it into a pod 